<resources xmlns:tools="http://schemas.android.com/tools" >
    <string name="app_name">냉장고를 부탁해</string>
    <string name="boxBtn">냉장고</string>
    <string name="boardBtn">추천 메뉴</string>
    <string name="homeBtn">홈</string>
    <string name="pushBtn">물품 넣기</string>
    <string name="optionBtn">설정</string>
    <string name="objectName">상품명</string>
    <string name="pushDB">PUSH</string>
    <string name="dateInput">유통기한</string>
    <string name="loginid">로그인 이메일</string>
    <string name="sortBtn">정렬</string>
    <string name="addBtn">추가</string>
    <string name="delBtn">삭제</string>
    <string name="input_loginid" >로그인 이메일을 입력하세요.</string>
    <string name="login_log">당신을 위한 냉장고!</string>
    <string name="password">비밀번호 입력</string>
    <string name="input_password">비밀번호를 입력하세요.</string>
    <string name="singUp">회원가입</string>
    <string name="move_login">회원가입</string>
    <string name="DrakmodeOn">다크모드 켜기</string>
    <string name="DarkmodeOff">다크모드 끄기</string>
    <string name="input_password2">비밀번호를 다시 입력하세요.</string>
    <string name="passwordok">비밀번호 확인</string>
    <string name="mant">당신을 위한 유통관리 앱 냉장고 입니다!</string>
    <string name="loginBtn2">LOGOUT</string>
    <string name="welcome">어서오세요!</string>
    <string name="loginBtn1">LOGIN</string>
    <string name="reset">냉장고 초기화</string>
    <string name="input_content">내용을 입력하세요</string>
    <string name="Save">저장</string>
    <string name="Memo">당신을 위한 간단한 메모</string>
    <string name="ref">냉장고</string>
</resources>
