<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PushActivity">

    <LinearLayout
        android:id="@+id/upLayout"
        android:layout_width="0sp"
        android:layout_height="70sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/homeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/homeBtn"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pushLayout"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upLayout"
        android:layout_marginTop="25sp">

        <Spinner
            android:id="@+id/categoryBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp"/>

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="@string/objectName"
            android:paddingLeft="15sp"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp" />

        <Button
            android:id="@+id/dateEndBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="OnClickHandler"
            android:text="@string/dateInput"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pushBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/pushDB"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginBottom="50sp"
            android:onClick="OnClickPush"
            android:gravity="center"
            android:text="@string/pushDB"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>